serving/blue-green/route-v1.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: customer 
  namespace: default
spec:
  traffic:
  - revisionName: customer-00001
    percent: 100
