serving/blue-green/route-v2-all.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: customer 
  namespace: default
spec:
  traffic:
  - revisionName: customer-00001
    percent: 0 
    name: v1
  - revisionName: customer-00002
    percent: 100 
    name: v2
